--- a/search.html
+++ b/search.html
@@ -2,11 +2,13 @@
 layout: page
 title: Search
 permalink: /search/
+published: true
 ---
+
 <div id="home-search" class="home">
     <script>
         (function() {
-            var cx = '[Your CSE Search ID]';
+    var cx = '013392517639286876084:95_or44lqqq';
             var gcse = document.createElement('script');
             gcse.type = 'text/javascript';
             gcse.async = true;
